# flight-schedule-parser

./: .gitignore  .ruff.toml  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  pylint_and_test.yml  pytest.yml  release.yml
bots/: finance_bot.py  tools.py  weather_bot.py
bots/discord/: base.py  config.py  jarvis.py
calendars/: config.py  config_test.py  gcal.py
cron/: __main__.py  instance.py  jobs.py
docker/: Dockerfile
jobs/: __init__.py  daily_flight_register_job.py  daily_job_register.py  daily_sundown_report.py  daily_weather_register_job.py  get_weather.py  monitor_flights.py  monitor_flights_test.py  monitor_weather.py  monitor_weather_test.py  parse_data_from_image.py  parse_flight_ocr_result.py  parse_flight_ocr_result_test.py  parse_schedule.py
kakao/: auth.py  client.py  config.py  watcher.py
models/: weather_bot.py
scheduler/: __main__.py  instance.py  jobs.py  spec.py
server/: api.py  dto.py
utils/: airports.py  flights.py  ocr.py  schedule.py  times.py
