[project]
name = "flight-schedule-parser"
version = "0.1.0"
description = "Flight scheduler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.10.5",
    "aiosignal==1.2.0",
    "airportsdata==20241001",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "argcomplete==3.5.1",
    "astroid==3.3.8",
    "attrs==24.2.0",
    "beautiful-date==2.3.0",
    "black==24.10.0",
    "blinker==1.6.2",
    "brotli==1.1.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "cryptography==43.0.3",
    "dill==0.3.9",
    "fastapi==0.115.6",
    "frozenlist==1.5.0",
    "gcsa==2.5.1",
    "google-api-core==2.24.0",
    "google-api-python-client==2.155.0",
    "google-auth==2.37.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "googleapis-common-protos==1.66.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "isort==5.13.2",
    "loguru==0.7.3",
    "mangum==0.19.0",
    "mccabe==0.7.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "oauth2client==4.0.0",
    "oauthlib==3.2.2",
    "packaging==24.2",
    "pathspec==0.12.1",
    "pillow==11.0.0",
    "pip==24.2",
    "pipx==1.7.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "propcache==0.2.0",
    "proto-plus==1.25.0",
    "protobuf==5.29.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.21",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pydantic-settings==2.7.0",
    "pyjwt==2.9.0",
    "pylint==3.3.3",
    "pynvim==0.5.2",
    "pyopenssl==24.2.1",
    "pyparsing==3.2.0",
    "pysocks==1.7.1",
    "pytesseract==0.3.13",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pytz-deprecation-shim==0.1.0.post0",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "setuptools==75.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "tomlkit==0.13.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==4.3.1",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "userpath==1.9.2",
    "uvicorn==0.34.0",
    "wheel==0.44.0",
    "win-inet-pton==1.1.0",
    "win32-setctime==1.2.0",
    "yarl==1.18.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pylint>=3.3.3",
]
