[project]
name = "flight-schedule-parser"
version = "0.1.0"
description = "Flight scheduler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "airportsdata>=20241001",
    "fastapi>=0.115.8",
    "gcsa>=2.5.1",
    "loguru>=0.7.3",
    "mangum>=0.19.0",
    "pydantic-settings>=2.7.1",
    "pytz>=2025.1",
    "third-party",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pylint>=3.3.3",
    "ruff>=0.9.6",
]

[tool.uv.workspace]
members = ["python-packages/third_party"]

[tool.uv.sources]
third-party = { workspace = true }
